Added Mod Operator This class is not a plugin-like class as Oscillator. The goal of this class is to take a generated signal and use it to modulate a signal or a int parameter. This is useful to mod also a delay line. This is useful also to mod multiple destinations at the same time.
Added update mod operator
This method is necessary to update mod operator before any kind of modulation.
Updating mod operator gets the latest generated signal from oscillator the latest generated signal from oscillator..

Moved update cursor table out of process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,8 @@ set(VSTPLUGIN_SOURCE
     src/Oscillator.hpp
     src/GainStereo.cpp
     src/GainStereo.hpp
+    src/ModOperator.cpp
+    src/ModOperator.hpp
     #resources/again.rc
     #resources/vstplug.def
     ${VSTSDK_PLUGIN_SOURCE}
